DesiNZC/main/default/objects/Account/fields/AccTotScope1EmissionsInTco2e__c.field-meta.xml
<CustomField>
    <fullName>AccTotScope1EmissionsInTco2e__c</fullName>
    <label>Total Scope 1 Emissions (tCO2e)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>