DesiNZC/main/default/objects/Account/fields/AccTotScope2MktBasedEmissions__c.field-meta.xml
<CustomField>
    <fullName>AccTotScope2MktBasedEmissions__c</fullName>
    <label>Total Scope 2 Market-based Emissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>