DesiNZC/main/default/objects/Account/fields/AccTotScope3EmissionsInTco2e__c.field-meta.xml
<CustomField>
    <fullName>AccTotScope3EmissionsInTco2e__c</fullName>
    <description>Roll-Up of Total Scope 3 Emissions (tCO2e)</description>
    <label>Total Scope 3 Emissions (tCO2e)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>